[metadata]
description = Module for creation and handling of discrete global grids
author = Christoph Paulik
author_email = christoph.paulik@geo.tuwien.ac.at
license = new-bsd
url = http://...
# Comma separated list of data inside your package to include
package_data = 
# Comma separated list of data outside your package to include
# Equivalent to adding files to MANIFEST.in
data_files = *.rst, *.txt
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 4 - Beta,
              Programming Language :: Python

[console_scripts]
# Add here console scripts like:
# script = pygeogrids.module:function
# for example:
# hello_world = pygeogrids.skeleton:run

[test]
# html, xml or annotate
cov-report = html
junitxml = junit.xml


# Options for py.test
[pytest]
flakes-ignore =
    doc/conf.py ALL

pep8-ignore =
    doc/conf.py ALL
